--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.8",
     "@t3-oss/env-nextjs": "^0.13.8",
     "drizzle-orm": "^0.44.5",
     "next": "15.5.2",
